syntax = "proto3";
package org.example.serverproto;
option java_multiple_files = true;

service Server {
  rpc getProperty (ServerPropertyName) returns (ServerPropertyValue) {}

  rpc getClientStreamingProperties (stream SystemPropertyName) returns (SystemProperties) {}
}

message ServerPropertyName {
  string propertyName = 1;
}

message ServerPropertyValue {
  string propertyValue = 1;
}

message SystemPropertyName {
  string propertyName = 1;
}

message SystemProperties {
  map<string, string> properties = 1;
}
